cmake_minimum_required(VERSION 3.29)
project(Marcos_Almeida_Caso_Final_Integrador_Tema_3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Marcos_Almeida_Caso_Final_Integrador_Tema_3
    .idea/.gitignore
    .idea/editor.xml
    .idea/Marcos_Almeida_Caso_Final_Integrador_Tema_3.iml
    .idea/modules.xml
    .idea/vcs.xml
    .idea/workspace.xml
        main.cpp
        main.h
    README.md)
